--- a/styles7.css
+++ b/styles7.css
@@ -1,4 +1,5 @@
 body {
+    overflow-x: hidden;
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 20px;
@@ -14,6 +15,7 @@ body {
 }
 
 .album-list {
+    flex-wrap: wrap; 
     display: flex;
     justify-content: space-between;
 }
